Update README with application details and instructions
Added detailed information about the digital clock application, including features, how to run it, and technologies used.